fix: removed padding-right + decreased image size in Services module + align text on left in last posts module

--- a/src/assets/scss/base/_generic.scss
+++ b/src/assets/scss/base/_generic.scss
@@ -195,7 +195,7 @@ figcaption {
   color: $color-gray;
   font-weight: 500;
   font-size: 17px;
-  text-align: center;
+  //text-align: center;
 }
 .landing_title {
   text-align: center;
