--- a/src/components/Landing/Skills/Skills.module.scss
+++ b/src/components/Landing/Skills/Skills.module.scss
@@ -7,6 +7,7 @@
   padding-bottom: 5em;
   margin-bottom: 1em;
   border-bottom: solid 1px $color-gray-border;
+  text-align: center;
 }
 
 .grid {
